--- a/package.json
+++ b/package.json
@@ -37,7 +37,6 @@
     "fill-range": "^7.1.1",
     "foreground-child": "^3.3.1",
     "fraction.js": "^4.3.7",
-    "fsevents": "^2.3.3",
     "function-bind": "^1.1.2",
     "glob": "^10.4.5",
     "glob-parent": "^6.0.2",
@@ -122,10 +121,15 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "export": "next export",
+    "predeploy": "npm run build && npm run export",
+    "deploy": "gh-pages -d out"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "homepage": "https://xiao-hannah.github.io/BloomBuddy",
+  "devDependencies": {
+    "gh-pages": "^6.3.0"
+  }
 }
