--- a/package.json
+++ b/package.json
@@ -123,7 +123,7 @@
     "build": "next build",
     "export": "next export",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d out"
+    "deploy": "gh-pages -d out --nojekyll --cname https://xiao-hannah.github.io/BloomBuddy/"
   },
   "keywords": [],
   "author": "",
