--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "## Project Scope",
   "main": "index.js",
   "dependencies": {
+    "@react-google-maps/api": "^2.20.6",
     "ansi-regex": "^6.1.0",
     "ansi-styles": "^6.2.1",
     "any-promise": "^1.3.0",
